--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sewagrafi">
         <activity
+            android:name=".ui.main.SplashScreenActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <receiver
+            android:name=".helper.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
             android:name=".ui.favorite.DetailFavoriteActivity"
             android:exported="false" />
         <activity
@@ -16,13 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.auth.LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".ui.beranda.DetailActivity"
             android:exported="false" />
